--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">JOuRGI</string>
+    <string name="app_name">APP1</string>
     <string name="btn_enviar">Enviar</string>
-    <string name="et_texto_hint">Digita ae paizao:</string>
+    <string name="et_texto_hint">Digita aqui:</string>
 </resources>
