--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">JOuRGI</string>
+    <string name="app_name">APP1</string>
     <string name="et_texto_hint">「ねえパパ」と入力</string>
     <string name="btn_enviar">送信する</string>
 </resources>
