--- a/app/src/main/res/values-ro-rMD/strings.xml
+++ b/app/src/main/res/values-ro-rMD/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">JOuRGI</string>
+    <string name="app_name">APP1</string>
     <string name="et_texto_hint">Tastați hei tati</string>
     <string name="btn_enviar">A trimite</string>
 </resources>
